# k8s-webterm-connector

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs
tools/: k8s-webterm-ssh-forward.sh  proxy-ssh-via-k8s-webterm.sh  punch-hole-via-webterm.sh
