[package]
name = "k8s-webterm-connector"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
url = "2.5.4"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
futures-util = { version = "0.3.31", features = ["std", "sink"] }

[profile.release]
lto = true
strip = true
