[package]
name = "k8s-webterm-connector"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
url = "2.5.7"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = { version = "0.3.31", features = ["std", "sink"] }

[profile.release]
lto = true
strip = true
