[package]
name = "k8s-webterm-connector"
version = "0.2.0"
edition = "2024"
license = "MIT"

[dependencies]
futures-util = { version = "0.3.33", features = ["std", "sink"] }
tokio = { version = "1.53.0", features = ["full"] }
tokio-tungstenite = { version = "0.30.0", features = ["native-tls"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
url = "2.5.8"

[profile.release]
lto = true
strip = true
